--- a/config.json
+++ b/config.json
@@ -17,14 +17,14 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100037951718438"
+    "100084228500089"
   ],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "hydrocarbon",
+  "nickNameBot": "hydrocarbon(⁠◕⁠ᴗ⁠◕⁠✿⁠)",
   "prefix": ".",
   "database": {
     "type": "sqlite",
